objects/advpm__AutoParticipantAccount__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>advpm__ID__c</fullName>
        <label>ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AutoParticipantAccount</label>
</CustomObject>